# ternary-inference-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  quantize_gptq_ternary.py  quantize_pt2_qep.py  quantize_ternary.py  quantize_universal.py  quantize_with_qep.py  test_gptq_fix.py  test_gptq_quality.py  test_itf_offset_impact.py  test_itf_quality.py
docs/research/: INDEX.md  baseline_experiments.md  bitdistill.md  experimental_results.md  implementation_plan.md  pt2_llm.md  pt_bitnet.md  ptqtp.md  qep.md  quip_sharp.md  tequila.md  ternaryllm.md
examples/: generate.rs  gpu_smoke_test.rs  load_and_matmul.rs
src/: config.rs  error.rs  generate.rs  kv_cache.rs  lib.rs  loader.rs  model.rs  unpack.rs
src/kernels/: cpu.rs  gpu.rs  mod.rs
